gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23552.d
version https://git-lfs.github.com/spec/v1
oid sha256:9299dbb71fb66d1088bef2c039c8bc33af439ec4028e50a16f18a761e46a3df2
size 423
